# tutor-bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/bot/handlers/: callbacks.py  commands.py  text.py
src/bot/middlewares/: user.py
src/db/: models.py  repository.py
src/tutor/: context.py  correction.py  engine.py  languages.py  prompts.py
src/utils/: telegram.py
