[project]
name = "language-tutor-bot"
version = "0.1.0"
description = "Multilingual language tutor Telegram bot powered by Claude"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "aiogram>=3.10",
    "anthropic>=0.40",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "aiohttp>=3.10",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
